# machine-learning

./: pyproject.toml  requirements.txt
compare-ols-rdge-lasso/: ols-ridge-lasso.ipynb
explore-tokyo-olympics-dataset/: tokyo-olympic.ipynb
lecture-2/: lecture2.ipynb
lecture-3/: regression.ipynb
lecture-4/: regression-evel.ipynb
linear-regression/: linear-regression.ipynb
pandas-practice/: titanic_pandas_assignment.ipynb
